# dqn_routing_research

./: .env.example  .gitignore  EXPERIMENT_LOG.md  README.md  REPO_AUDIT.md  Research_Plan_MultiAgent_Set_Routing_v1.0.0.md  pyproject.toml  requirements.txt
configs/: baseline_protocol.json  ddqn_adaptive_jaccard.json  ddqn_adaptive_jaccard_smoke.json  ddqn_adaptive_jaccard_v2.json  ddqn_adaptive_jaccard_v2_smoke.json  ddqn_adaptive_log_lambda005.json  ddqn_jaccard_curriculum.json  ddqn_jaccard_curriculum_smoke.json  ddqn_jaccard_step001.json  ddqn_jaccard_step005.json  ddqn_jaccard_step010.json  ddqn_jaccard_step020.json  ddqn_log_lambda003.json  ddqn_log_lambda005.json  ddqn_log_lambda005_full.json  ddqn_log_lambda010.json  ddqn_log_lambda010_full.json  ddqn_log_lambda010_full_v2.json  ddqn_log_lambda010_smoke.json  ddqn_log_lambda015.json  ddqn_set_beta1_step005.json  ddqn_set_beta1_step005_gamma2_actionmask.json  ddqn_set_beta1_step005_gamma2_nomask.json  ddqn_set_default.json
data/: tasks.jsonl  tasks_draft.tsv  tasks_set.jsonl  tasks_set_adaptive.jsonl  tasks_set_adaptive_full.jsonl  tasks_set_adaptive_smoke.jsonl  tasks_set_draft.tsv
data/splits/: test.jsonl  train.jsonl  val.jsonl
data/splits_adaptive/: test.jsonl  train.jsonl  val.jsonl
src/multiagent_dqn_routing/: agents.py
src/multiagent_dqn_routing/data/: dataset.py
src/multiagent_dqn_routing/eval/: evaluator.py  (+1 more)
tools/: README.md  baseline_snapshot.py  dataset_stats_set.py  fix_dataset.py  generate_adaptive_dataset.py  plot_figures.py  split_adaptive_dataset.py  split_jsonl_set.py  tsv_to_jsonl.py
(+16 files in other folders)
